# GTSPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/sample/: cosine_1k.txt  cosine_1k_qid.txt  cosine_1k_query.txt  deep_10k_groundtruth.txt  deep_10k_qid.txt  deep_10k_query.txt  gist_1k_groundtruth.txt  gist_1k_qid.txt  gist_1k_query.txt  sift_10k_groundtruth.txt  sift_10k_qid.txt  sift_10k_query.txt  sift_10k_update.txt  word_5k.txt  word_5k_qid.txt
include/: config.cuh  file.cuh  gpu_timer.cuh  mlp_constant.cuh  residual_pruning.cuh  residual_tuner.cuh  search.cuh  search_naive.cuh  search_v2.cuh  tree.cuh  update.cuh
scripts/: run_ablation.sh  run_all.sh
src/: main.cu  mlp_constant.cuh
tools/: gen_sample_data.py
